--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -76,9 +76,9 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="36" splitType="Stretch">
+		<band height="18" splitType="Stretch">
 			<staticText>
-				<reportElement x="134" y="2" width="80" height="30" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
+				<reportElement x="176" y="2" width="72" height="15" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -91,7 +91,7 @@
 				<text><![CDATA[F. Nacimiento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="214" y="2" width="48" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
+				<reportElement x="248" y="2" width="38" height="15" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -104,7 +104,7 @@
 				<text><![CDATA[Edad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="262" y="2" width="212" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<reportElement x="286" y="2" width="214" height="15" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -117,7 +117,7 @@
 				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="474" y="2" width="98" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<reportElement x="500" y="2" width="72" height="15" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -130,7 +130,7 @@
 				<text><![CDATA[Teléfono]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="2" width="134" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
+				<reportElement x="0" y="2" width="176" height="15" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -145,9 +145,9 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Stretch">
+		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement x="214" y="0" width="48" height="28" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<reportElement x="248" y="0" width="38" height="15" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineColor="#FFFFFF"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
@@ -155,10 +155,11 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 				</box>
-				<textFieldExpression><![CDATA[  $F{edad}]]></textFieldExpression>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{edad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="262" y="0" width="212" height="28" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
+				<reportElement x="286" y="0" width="214" height="15" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineColor="#FFFFFF"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
@@ -166,10 +167,10 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 				</box>
-				<textFieldExpression><![CDATA[  $F{direccion}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{direccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="474" y="0" width="98" height="28" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
+				<reportElement x="500" y="0" width="72" height="15" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineColor="#FFFFFF"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
@@ -177,10 +178,11 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 				</box>
-				<textFieldExpression><![CDATA[  $F{telefono}]]></textFieldExpression>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1" y="0" width="133" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<reportElement x="176" y="0" width="72" height="15" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineColor="#FFFFFF"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
@@ -188,10 +190,11 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 				</box>
-				<textFieldExpression><![CDATA[  $F{docente}]]></textFieldExpression>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{fechaNacimiento}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="134" y="0" width="80" height="28" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
+				<reportElement x="1" y="0" width="175" height="15" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineColor="#FFFFFF"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
@@ -199,7 +202,7 @@
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
 				</box>
-				<textFieldExpression><![CDATA[  $F{fechaNacimiento}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{docente}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
