--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpcursos.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpcursos.jrxml
@@ -77,9 +77,9 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="32" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="2" width="144" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
+				<reportElement x="0" y="2" width="144" height="16" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -92,7 +92,7 @@
 				<text><![CDATA[Curso]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="144" y="2" width="70" height="30" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
+				<reportElement x="144" y="2" width="70" height="16" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -105,7 +105,7 @@
 				<text><![CDATA[Capacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="214" y="2" width="155" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
+				<reportElement x="214" y="2" width="155" height="16" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -118,20 +118,7 @@
 				<text><![CDATA[Docente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="369" y="2" width="38" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
-				<box padding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Grado]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="407" y="2" width="46" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<reportElement x="407" y="2" width="46" height="16" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -144,7 +131,7 @@
 				<text><![CDATA[Seccion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="453" y="2" width="119" height="30" forecolor="#000000" backcolor="#FFFFFF" uuid="fdbbb121-574c-44d0-8b27-f29fecaae87e"/>
+				<reportElement mode="Transparent" x="453" y="2" width="119" height="16" forecolor="#000000" backcolor="#FFFFFF" uuid="fdbbb121-574c-44d0-8b27-f29fecaae87e"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<pen lineWidth="1.0" lineColor="#000000"/>
 					<topPen lineWidth="1.0" lineColor="#000000"/>
@@ -158,77 +145,95 @@
 				</textElement>
 				<text><![CDATA[Materia]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="369" y="2" width="38" height="16" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Grado]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<textField>
-				<reportElement x="214" y="0" width="155" height="28" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<reportElement x="214" y="0" width="155" height="15" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{docente}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="369" y="0" width="38" height="28" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
+				<reportElement x="369" y="0" width="38" height="15" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{grado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="407" y="0" width="46" height="28" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
+				<reportElement x="407" y="0" width="46" height="15" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{seccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="0" width="144" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<reportElement x="0" y="0" width="144" height="15" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="1.0" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="144" y="0" width="70" height="28" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
-				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{capacidad}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement mode="Transparent" x="453" y="0" width="119" height="28" forecolor="#000000" backcolor="#FFFFFF" uuid="52565e54-b0ef-4518-9f08-c069c0af5ff7"/>
+				<reportElement mode="Transparent" x="453" y="0" width="119" height="15" forecolor="#000000" backcolor="#FFFFFF" uuid="52565e54-b0ef-4518-9f08-c069c0af5ff7"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<pen lineWidth="1.0"/>
-					<topPen lineWidth="1.0"/>
-					<leftPen lineWidth="1.0"/>
-					<bottomPen lineWidth="1.0"/>
-					<rightPen lineWidth="1.0"/>
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="0.0"/>
+					<rightPen lineWidth="0.0"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="None" markup="none">
 					<font fontName="SansSerif" size="10" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{materia}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="144" y="0" width="70" height="15" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{capacidad}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -241,7 +246,10 @@
 	<summary>
 		<band height="50">
 			<textField>
-				<reportElement x="70" y="6" width="174" height="20" uuid="443ddb15-8659-4060-92bc-95c952cef492"/>
+				<reportElement x="5" y="0" width="567" height="20" uuid="443ddb15-8659-4060-92bc-95c952cef492"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+				</box>
 				<textFieldExpression><![CDATA["Total de Cursos: "+ $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
