--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/rendimientoAlumno/index.xhtml
@@ -25,17 +25,18 @@
                     <p:calendar class="Container100" id="desde" value="#{rptRendimientoController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel value="hasta:"></p:outputLabel>
                     <p:calendar class="Container100" id="hasta" value="#{rptRendimientoController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
-                    <p:outputLabel value="Grado:"></p:outputLabel>
-                    <p:selectOneMenu >
-                        <f:selectItem itemValue="0" itemLabel=""></f:selectItem>
+                    <p:outputLabel  value="Grado: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="grado" class=" Responsive" value="#{rptRendimientoController.idGrado}" valueChangeListener="#{rptRendimientoController.getSeccionesGrado}" converter="grado">
+                        <f:selectItems itemValue="#{grado}" itemLabel="#{grado.grNombre}" value="#{rptRendimientoController.gradosList}" var="grado"></f:selectItems>
+                        <p:ajax event="valueChange" update="seccion"/>
                     </p:selectOneMenu>
-                    <p:outputLabel value="Seccion:"></p:outputLabel>
-                    <p:selectOneMenu >
-                        <f:selectItem itemValue="0" itemLabel=""></f:selectItem>
+                    <p:outputLabel value="Seccion:" class="Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="seccion" class=" Responsive" value="#{rptRendimientoController.seccion}" >
+                        <f:selectItems itemValue="#{seccion}" itemLabel="#{seccion.scDescripcion}" value="#{rptRendimientoController.seccionesList}" var="seccion"></f:selectItems>
                     </p:selectOneMenu>
-                    <p:outputLabel value="Materia:"></p:outputLabel>
-                    <p:selectOneMenu >
-                        <f:selectItem itemValue="0" itemLabel=""></f:selectItem>
+                    <p:outputLabel id="materia" value="Materia:"></p:outputLabel>
+                    <p:selectOneMenu class=" Responsive" value="#{rptRendimientoController.materia}" >
+                        <f:selectItems itemValue="#{materia}" itemLabel="#{materia.maNombre}" value="#{rptRendimientoController.materiaList}" var="materia"></f:selectItems>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
@@ -70,7 +71,7 @@
                         #{car.promedio}
                     </p:column>
                     <f:facet name="footer">
-                        Total de alumnos #{rptRendimientoController.totalTransacciones}                        
+                        Total de registros #{rptRendimientoController.totalTransacciones}                        
                     </f:facet>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
