--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/ejerciciosResueltos/index.xhtml
@@ -19,16 +19,8 @@
                 <h:form>
 
                     <p:menubar>
-                        <p:submenu label="Funciones" >            
-                            <p:menuitem value="Absoluto" icon="ui-icon-absoluto" action="#{gestionDisenioEjercicioController.formulaConstruct(1)}" update="formula"/>
-                            <p:menuitem value="Factorial" icon="ui-icon-factorial" action="#{gestionDisenioEjercicioController.formulaConstruct(2)}" update="formula"/>
-                            <p:menuitem value="Raiz" icon="ui-icon-raiz" action="#{gestionDisenioEjercicioController.formulaConstruct(3)}" update="formula"/>
-                            <p:menuitem value="Raiz n" icon="ui-icon-raizx" action="#{gestionDisenioEjercicioController.formulaConstruct(4)}" update="formula"/>
-                            <p:menuitem value="Funcion exp" icon="ui-icon-ex" action="#{gestionDisenioEjercicioController.formulaConstruct(5)}" update="formula"/>
-                            <p:menuitem value="Potencia" icon="ui-icon-xb" action="#{gestionDisenioEjercicioController.formulaConstruct(6)}" update="formula"/>
-                            <p:menuitem value="log natural" icon="ui-icon-ex" action="#{gestionDisenioEjercicioController.formulaConstruct(7)}" update="formula"/>
-                            <p:menuitem value="log base 10" icon="ui-icon-log" action="#{gestionDisenioEjercicioController.formulaConstruct(8)}" update="formula"/>
-                            <p:separator />
+                        <p:submenu label="Funciones" >   
+                            <p:submenu label="Trigonometricas">
                             <p:menuitem value="sen(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(9)}" update="formula"/>
                             <p:menuitem value="cos(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(10)}" update="formula"/>
                             <p:menuitem value="tan(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(11)}" update="formula"/>
@@ -40,17 +32,32 @@
                             <p:separator />
                             <p:menuitem value="arcsen(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(17)}" update="formula"/>
                             <p:menuitem value="arccos(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(18)}" update="formula"/>
-                            <p:menuitem value="arctan(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(19)}" update="formula"/>
+                            <p:menuitem value="arctan(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(19)}" update="formula"/>                                  
+                            </p:submenu>
                             
-                            <p:menuitem value="arcsenh(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(21)}" update="formula"/>
-                            <p:menuitem value="arccosh(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(22)}" update="formula"/>
-                            <p:menuitem value="arctanh(x)" action="#{gestionDisenioEjercicioController.formulaConstruct(23)}" update="formula"/>
+                            <p:menuitem value="Absoluto" icon="ui-icon-absoluto" action="#{gestionDisenioEjercicioController.formulaConstruct(1)}" update="formula"/>
+                            <p:menuitem value="Factorial" icon="ui-icon-factorial" action="#{gestionDisenioEjercicioController.formulaConstruct(2)}" update="formula"/>
+                            <p:menuitem value="Raiz" icon="ui-icon-raiz" action="#{gestionDisenioEjercicioController.formulaConstruct(3)}" update="formula"/>
+                            <p:menuitem value="Raiz n" icon="ui-icon-raizx" action="#{gestionDisenioEjercicioController.formulaConstruct(4)}" update="formula"/>
+                            <p:menuitem value="Funcion exp" icon="ui-icon-ex" action="#{gestionDisenioEjercicioController.formulaConstruct(5)}" update="formula"/>
+                            <p:menuitem value="Potencia" icon="ui-icon-xb" action="#{gestionDisenioEjercicioController.formulaConstruct(6)}" update="formula"/>
+                            <p:menuitem value="log natural" icon="ui-icon-ex" action="#{gestionDisenioEjercicioController.formulaConstruct(7)}" update="formula"/>
+                            <p:menuitem value="log base 10" icon="ui-icon-log" action="#{gestionDisenioEjercicioController.formulaConstruct(8)}" update="formula"/>
                             
+                                                     
+                                                       
                         </p:submenu>
 
-                        <p:submenu label="Edit" icon="ui-icon-pencil">
-                            <p:menuitem value="Undo" url="#" icon="ui-icon-arrowreturnthick-1-w" />
-                            <p:menuitem value="Redo" url="#" icon="ui-icon-fun" />
+                        <p:submenu label="Agrupaciones" icon="ui-icon-pencil">
+                            <p:menuitem value="Parentesis" icon="ui-icon-parentesis" action="#{gestionDisenioEjercicioController.formulaConstruct(20)}" update="formula"/>
+                            <p:menuitem value="Corchete" icon="ui-icon-corchete" action="#{gestionDisenioEjercicioController.formulaConstruct(21)}" update="formula"/>
+                            <p:menuitem value="Corchete doble" icon="ui-icon-corchete2" action="#{gestionDisenioEjercicioController.formulaConstruct(22)}" update="formula"/>
+                            <p:menuitem value="Llaves" icon="ui-icon-llave" action="#{gestionDisenioEjercicioController.formulaConstruct(23)}" update="formula"/>
+                            <p:menuitem value="Angular" icon="ui-icon-mayorIgual" action="#{gestionDisenioEjercicioController.formulaConstruct(24)}" update="formula"/>
+                            <p:menuitem value="Linea" icon="ui-icon-lsencilla" action="#{gestionDisenioEjercicioController.formulaConstruct(25)}" update="formula"/>
+                            <p:menuitem value="Linea doble" icon="ui-icon-ldoble" action="#{gestionDisenioEjercicioController.formulaConstruct(26)}" update="formula"/>
+                            <p:menuitem value="Binomio" icon="ui-icon-binomio" action="#{gestionDisenioEjercicioController.formulaConstruct(27)}" update="formula"/>
+                            <p:menuitem value="Matriz 2x3" icon="ui-icon-matriz" action="#{gestionDisenioEjercicioController.formulaConstruct(28)}" update="formula"/>
                         </p:submenu>
 
                         <p:submenu label="Help" icon="ui-icon-help">
@@ -73,23 +80,19 @@
                             </p:submenu>
                         </p:submenu>
 
-                        <p:menuitem value="Quit" url="http://www.primefaces.org" icon="ui-icon-close" />
-
-                        <f:facet name="options">
-                            <p:inputText style="margin-right:10px" placeholder="Search"/>
-                            <p:commandButton type="button" value="Logout" icon="ui-icon-extlink" />
-                        </f:facet>
+                                                
                     </p:menubar>
 
                     <div class="EmptyBox20"></div>
                     <p:outputLabel for="formula" value="Formula: " class=" Responsive"></p:outputLabel>
                     <p:inputTextarea  class="Container100" id="formula" value="#{gestionDisenioEjercicioController.formula}"></p:inputTextarea>
+                    
 
                     <p:graphicImage id="consulta" value="#{gestionDisenioEjercicioController.graphicText}" styleClass="Fleft"  cache="false"></p:graphicImage>
 
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
-                        <p:commandButton value="Generar" action="#{gestionDisenioEjercicioController.refresh()}" icon="ui-icon-funciones" update="consulta"></p:commandButton>
+                        <p:commandButton value="Generar" action="#{gestionDisenioEjercicioController.refresh()}"  update="consulta"></p:commandButton>
                         <p:commandButton value="Refrescar" action="#{gestionDisenioEjercicioController.refresh()}" ></p:commandButton>
 
                     </div>
